# bam_collapsing

./: .gitignore  .gitmodules  .pyup.yml  .travis.yml  CONTRIBUTING.rst  Makefile  README.md  README.rst  SUMMARY.md  bam_collapsing.cwl  bam_collapsing_marianas.cwl  book.json  get_test_data.sh  requirements.txt  requirements_p2.7.txt  setup.cfg  setup.py  test_inputs.yaml  tox.ini
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  issue_template.md
.github/workflows/: codeql.yml  test_bam_collapsing.yaml
bam_collapsing/: __init__.py
docs/: Intorduction.md  Makefile  README.md  SUMMARY.md  bam_collapsing.md  conf.py  index.rst  inputs-description.md  installation.rst  make.bat  outputs-description.md  quickstart.md  tools-desciption.md  tools-description.md  usage.rst
docs/github_specifications/: CONTRIBUTING.md
tests/: conftest.py  test_bam_collapsing.py
