[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bam_collapsing/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
name = "bam_collapsing"
version = 0.1.2

[options]
packages = "bam_collapsing"
install_requires =
    requests
    importlib; python_version == "3.6"